--- a/index.html
+++ b/index.html
@@ -11,14 +11,17 @@
   </head>
 
   <body>  
-  <nav class="navbar navbar-expand-md navbar-dark" style="background-color: #34393f">
+  <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #34393f">
   <div class="container-fluid">
     <a class="navbar-brand text-white" href="#">
       <img src="images/codoacodo.png" alt="" width="100" height="50" class="d-inline-block align-text-center">
       Conf Bs As
     </a>
-    <div class="collapse navbar-collapse flex-row-reverse" id="navbarNav">
-        <ul class="navbar-nav">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Menu">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse " id="navbarNav">
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="#" >La conferencia</a>
           </li>
@@ -32,7 +35,7 @@
             <a class="nav-link" href="#">Conviértete en orador</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-success" href="#">Comprar ticket</a>
+            <a class="nav-link text-success" href="tickets.html">Comprar ticket</a>
           </li>
         </ul>
      </div>
@@ -152,18 +155,19 @@
 
 <br>
 
-<nav class="navbar navbar-expand-lg navbar-dark " style="background: linear-gradient(90deg, rgba(29,55,68,1) 0%, rgba(30,83,114,1) 100%);">
-  <div class="collapse navbar-collapse justify-content-center" id="footer">
-    <div class="navbar-nav">
-      <a class="nav-link" href="#" >Preguntas frecuentes</a>
-      <a class="nav-link" href="#">Contáctanos</a>
-      <a class="nav-link" href="#">Prensa</a>
-      <a class="nav-link" href="#">Conferencias</a>
-      <a class="nav-link" href="#">Términos y Condiciones</a>
-      <a class="nav-link" href="#">Privacidad</a>
-      <a class="nav-link" href="#">Estudiantes</a>
-    </div>
+<nav class="navbar navbar-expand-lg navbar-dark "
+style="background: linear-gradient(90deg, rgba(29,55,68,1) 0%, rgba(30,83,114,1) 100%);">
+<div class="container-fluid justify-content-center flex-column flex-sm-row w-100" id="footer">
+  <div class="navbar-nav">
+    <a class="nav-link" href="#">Preguntas frecuentes</a>
+    <a class="nav-link" href="#">Contáctanos</a>
+    <a class="nav-link" href="#">Prensa</a>
+    <a class="nav-link" href="#">Conferencias</a>
+    <a class="nav-link" href="#">Términos y Condiciones</a>
+    <a class="nav-link" href="#">Privacidad</a>
+    <a class="nav-link" href="#">Estudiantes</a>
   </div>
+</div>
 </nav>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
